2011-02-02  Beth Dakin  <bdakin@apple.com>

        Reviewed by Mark Rowe.

        Fix for <rdar://problem/8950343> CrashTracer: [USER]
        1 crash in WebProcess at com.apple.WebCore: 
        WebCore::ScrollbarThemeMac::unregisterScrollbar + 22

        It is possible for a Scrollbar's ScrollableArea to be null,
        so we must null check.
        * platform/mac/ScrollbarThemeMac.mm:
        (WebCore::ScrollbarThemeMac::registerScrollbar):
        (WebCore::ScrollbarThemeMac::unregisterScrollbar):

2011-02-02  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        bufferData and bufferSubData should generate INVALID_VALUE with negative input
        https://bugs.webkit.org/show_bug.cgi?id=53626

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::bufferData):
        (WebCore::WebGLRenderingContext::bufferSubData):

2011-02-02  Jeff Miller  <jeffm@apple.com>

        Reviewed by Darin Adler and Steve Falkenburg.

        Add DerivedSources.make to some Visual Studio projects
        https://bugs.webkit.org/show_bug.cgi?id=53607

        * WebCore.vcproj/WebCoreGenerated.vcproj: Add DerivedSources.make.

2011-02-02  Cris Neckar  <cdn@chromium.org>

        Reviewed by James Robinson.

        Refcount domwindows when dispatching device orientation events.
        https://bugs.webkit.org/show_bug.cgi?id=53623

        Test: fast/events/device-orientation-crash.html

        * dom/DeviceMotionController.cpp:
        (WebCore::DeviceMotionController::timerFired):
        (WebCore::DeviceMotionController::didChangeDeviceMotion):
        * dom/DeviceMotionController.h:
        * dom/DeviceOrientationController.cpp:
        (WebCore::DeviceOrientationController::timerFired):
        (WebCore::DeviceOrientationController::didChangeDeviceOrientation):
        * dom/DeviceOrientationController.h:

2011-02-02  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.
